--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
 .DS_Store
 .cache/
-custom.el
-eshell/
-history
-places
-recentf
-straight/
-transient/
-elpa/
-backups/
-.lsp-session*
-emojis
 auto-save-list/
+custom.el
+elpa/
+emojis/
+places
+recentf*
 server/
-desktop/
-.emacs.desktop
 smex-items
+transient/
+history
+projectile-bookmarks.eld
